* Added "dynatable.html" template that can be included in templates (Chris T)
* Dynatable forms obtained through GET now show link back to form (Chris T)
* LedgerSMB->error and Form->error now show db version and company (Chris T)
* Simpler use of Log::Log4perl instead of LedgerSMB::Log (Chris T)
* Changing all auth calls to hit postgres db instead of template1 (Chris T)

Customer/Vendor Handling 
* Added sales tax id and license number fields for companies (Chris T)
* Simpified database schema (Chris T)

New CSV Import Module (Chris T)
* Imports GL transactions
* Imports AP batches
* Extensible
* field maps can be overridden

New Business Reporting Unit System (Chris T)
* Replaces Projects and Departments
* Business reporting units may be nested
* Allows one to do funds accounting, track jobs separately from projects, etc
* Report on any combination of business reporting units (up to one per class)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.14
* Argentina (Spanish) translation and charts of accounts added. (Andres B)
* Fixed errors saving when duedate is blank, bug 3503463 (Chris T)
* Corrected editing pos_invoice.txt whitelisting in front-end (Chris T)
* Corrected erroneous directory transversal denial (Chris T, bug 3504924)
* Added recon data to Norwegian chart of accounts (h/t H. Sorli) (Chris T)
* Fixed some menu items disappearing after upgrade (Chris T, bug 3504934)
* Added default to country for initial setup (Chris T, bug 3496967)
* Added recon data to COA files for a few extra locales (Chris T bug 3505102)
* Clarified error message when contrib scripts not found (Chris T)
* Corrected warnings for missin glog initalization (Andres B)
* XLS and ODS buttons are now disabled if prereqs are missing (Erik H)
* Experimental support for migrating from SQL-Ledger via Setup.pl (Chris T)
* Fixed POD issues with lsmb-request.pl (h/t Robert C) (Chris T item 3472648)