@@ -16,6 +16,9 @@ General Enhancements:
 * Simpler use of Log::Log4perl instead of LedgerSMB::Log (Chris T)
 * Changing all auth calls to hit postgres db instead of template1 (Chris T)
 
+New Reporting Framework
+* Easy bridge between SQL and display (Chris T)
+
 Customer/Vendor Handling 
 * Added sales tax id and license number fields for companies (Chris T)
 * Simpified database schema (Chris T)
